2022-09-13  Aleksei Vetrov  <vvvvvv@google.com>

	* Makefile.am (check_PROGRAMS): Add dwfl-report-offline-memory.
	(TESTS): Add run-dwfl-report-offline-memory.sh.
	(EXTRA_DIST): Likewise.
	(dwfl_report_offline_memory_LDADD): New variable.
	* dwfl-report-offline-memory.c: New file.
	* run-dwfl-report-offline-memory.sh: Likewise.

2022-09-13  Khem Raj <raj.khem@gmail.com>

	* Makefile.am (*_LDADD): Add libeu if needed for error.

2022-08-26  Mark Wielaard  <mark@klomp.org>

	* run-ar-N.sh: New test.
	* Makefile.am (TESTS): Add run-ar-N.sh.
	(EXTRA_DIST): Likewise.

2022-09-02  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-response-headers.sh: Use case-insensitive
	header name matches.  Use socat & sleep for greater
	portability.
	* run-debuginfod-sizetime.sh: Update for debuginfod-find -v -v.

2022-07-15  Noah Sanci  <nsanci@redhat.com>

	* run-debuginfod-response-headers.sh: Added test
	to ensure that federated servers pass headers down to
	queried server.

2022-08-04  Sergei Trofimovich  <slyich@gmail.com>

	* low_high_pc.c (handle_die): Drop redundant 'lx' suffix.

2022-08-01  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-percent-escape.sh: Add initial scan wait_ready.

2022-04-28  Di Chen  <dichen@redhat.com>

	* run-readelf-Dd.sh: New test.
	* Makefile.am (TESTS): Add run-readelf-Dd.sh.
	(EXTRA_DIST): Likewise.

2022-06-01  Mark Wielaard  <mark@klomp.org>

	* testfile-arm-flags.bz2: New test file.
	* run-readelf-arm-flags.sh: New test.
	* Makefile.am (TESTS): Add run-readelf-arm-flags.sh.
	(EXTRA_DIST): Add readelf-arm-flags.sh and testfile-arm-flags.bz2

2022-05-13  Noah Sanci  <nsanci@redhat.com>

	* run-debuginfod-fd-prefetch-caches.sh: Rewritten.

2022-06-02  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (TESTS): Add run-debuginfod-federation-metrics.sh
	only when OLD_LIBMICROHTTPD conditional is not set.

2022-04-24  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-webapi-concurrency.sh: Fix PR number in xfail.
